# Excel2TeX

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  converter.py  grid_converter.py  grid_editor.py  grid_toolbar.py  main.py  preprocessing.py  pyproject.toml  table_model.py
.agents/skills/add-feature/: SKILL.md
.agents/skills/catchup/: SKILL.md
.agents/skills/checkpointing/: SKILL.md  checkpoint.py
.agents/skills/codex-system/: SKILL.md
.claude/agents/: codex-debugger.md  general-purpose.md
.claude/docs/: CODEX_HANDOFF_PLAYBOOK.md  DESIGN.md
.claude/logs/: cli-tools.jsonl
.claude/rules/: codex-delegation.md
.codex/: config.toml  hooks.json
.codex/agents/: codex-debugger.toml  general-purpose.toml
.codex/hooks/: agent-router.py  check-codex-before-write.py  log-cli-tools.py
.codex/skills/: design-tracker
.github/: release.yml
.github/workflows/: release.yml
inside-docs/: README.md  specification.md
inside-docs/additional-info-feature/: report.md
inside-docs/extended-features/: extended_specification.md  implementation_roadmap.md  implementation_summary.md
inside-docs/mvp-implementation/: mvp_plan.md  report.md
inside-docs/project-status/: implementation-status-2026-07-17.md
inside-docs/table-editor-feature/: report.md
outputs/: Excel2TeX_最終発表.pptx
src/: grid_editor.py  grid_history.py  grid_toolbar.py  main.py  preprocessing.py  table_model.py  ui_layout.py
tests/: test_converter.py  test_grid_converter.py  test_grid_editor.py  test_grid_history.py  test_preprocessing.py  test_table_model.py  test_ui_layout.py
(+24 files in other folders)
