[project]
name = "excel2tex"
version = "0.1.0"
description = "Convert CSV and Excel table data into LaTeX table code."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet==0.85.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.flet.app]
exclude = [".git", ".pytest_cache", ".venv", "build"]
path = "src"

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
    ".agents",
    ".claude",
    ".codex",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.flet.compile]
app = true
